AdBooker * Fixed an issue with the overview page not showing corectly due to an overflow bug

--- a/apps/ab/ui/_css/page_app_overview.css
+++ b/apps/ab/ui/_css/page_app_overview.css
@@ -127,7 +127,7 @@
   display: none;
 }
 .pages > article {
-  overflow-y: auto;
+  overflow: hidden;
 }
 #record-list-middle {
   position: absolute;
